--- a/homepage.html
+++ b/homepage.html
@@ -39,18 +39,23 @@
         font-size: 40px;
     }
     #searchbox {
-        background-color: #202020;
-        border-radius: 5px;
-        font-size: 30px;
+      border-radius: 8px;
+      background: #202020;
+      box-shadow:  inset 10px 10px 15px #181818, 
+                   inset 0px 0px 5px #282828;
+      padding: 2px;
+      font-size: 30px;
     }
     #query {
         all: unset;
         margin: 4px;
+        padding-top: 4px;
+        padding-left: 4px;
     }
     #magnifying-glass {
         all: unset;
-        margin: 5px;
-        padding-right: 5px;
+        margin: 4px;
+        padding-right: 8px;
     }
     #glass-svg {
         background-color: #202020;
