Added Autofocus for the search box

--- a/homepage.html
+++ b/homepage.html
@@ -151,7 +151,7 @@
       <p id="mon" style="margin-top: 0; margin-bottom: 0;"></p>
     </div>
     <form id="searchbox" role="search">
-      <input type="search" id="query" placeholder="Search?">
+      <input type="search" id="query" placeholder="Search?" autofocus>
       <button type="submit" id="magnifying-glass">
         <img src="res/search.svg" id="glass-svg"></img>
       </button>
